crates/strider-analyze/tests/snapshots/v3__ppc32le__calling_convention__forward_8.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x1001018c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "14" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="arg[7] ← r10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[6] ← r9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[5] ← r8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[4] ← r7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "47" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "51" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "53" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "55" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "57" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "59" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "61" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "65" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "69" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "71" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "73" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "75" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "77" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "79" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "81" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "79" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "82" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "84" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "84" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
